# ComfyUI_LoRA_Sidebar

./: README.md  __init__.py  pyproject.toml
web/: lora_sidebar.js  smart_info.js
web/css/: lora-sidebar.css
