[project]
name = "comfyui_lora_sidebar"
description = "A custom front-end UX node that creates a visual library of all your LoRAs. It's designed to be fast, slim, and make using LoRAs in Comfy a lot more fun for visual users - especially if you have lots of LoRAs. Should make people used to A1111 and other UI heavy platforms feel more at home. If you've got lots of LoRAs, this sidebar could be your new best friend!"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Kinglord/ComfyUI_LoRA_Sidebar"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_LoRA_Sidebar"
Icon = ""
